Added res, new layout and output feature

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">One2Cook</string>
+    <string name="app_name_in_fragment">One2cook</string>
+    <string name="make_delicious">make delicious</string>
+    <string name="hint_search_line">What would you like to cook?</string>
+    <string name="search_button">search button</string>
+    <string name="magnifying_glass">magnifying glass</string>
 </resources>
