--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="hint_search_line">What would you like to cook?</string>
     <string name="search_button">search button</string>
     <string name="magnifying_glass">magnifying glass</string>
+    <string name="search_line">search line</string>
 </resources>
