All tasks finished

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,11 +11,10 @@
     <string name="total_time_cooking">Total Time Cooking</string>
     <string name="bar_list_item">Bar</string>
     <string name="image_timer">image timer</string>
-    <string name="cuisine_type">Cuisine type: %1$s</string>
     <string name="cooking_time">Cooking time: %1$s</string>
     <string name="calories">Calories: %1$s</string>
     <string name="dish_image">dish image</string>
     <string name="ingredients">Ingredients:</string>
-    <string name="source">Source: %1$s</string>
+    <string name="source">Directions here: %1$s</string>
     <string name="yield">Yield: %1$s</string>
 </resources>
