--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="ingredients">Ingredients:</string>
     <string name="source">Directions here: %1$s</string>
     <string name="yield">Yield: %1$s</string>
+    <string name="add_to_favorites">add to favorites</string>
 </resources>
