--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="source">Directions here: %1$s</string>
     <string name="yield">Yield: %1$s</string>
     <string name="add_to_favorites">add to favorites</string>
+    <string name="go_to_favorites">Go to favorites</string>
 </resources>
