--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="yield">Yield: %1$s</string>
     <string name="add_to_favorites">add to favorites</string>
     <string name="go_to_favorites">Go to favorites</string>
+    <string name="back_button">back button</string>
 </resources>
